gccida/c1/ix86_zero_extend_to_Pmode
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_zero_extend_to_Pmode/src/i386.c:9567:21: error: use of undeclared identifier 'machine_mode'
return force_reg( ( machine_mode)v3, exp); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_zero_extend_to_Pmode/src/i386.c:9569:28: error: use of undeclared identifier 'machine_mode'
return copy_to_mode_reg( ( machine_mode)v3, exp); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_zero_extend_to_Pmode/src/i386.c:9570:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_reg_rtx( ( machine_mode)v3); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_zero_extend_to_Pmode/src/obj/i386.o] Error 1
